--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/stockOut.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/stockOut.xhtml
@@ -46,7 +46,7 @@
                         <p:selectOneMenu id="salerInfo" value="#{stockOut.salerId}"
                                              style="font-size: 90%;">
                             <f:selectItems value="#{wholesalerEditor.salers}"
-                                   var="saler" itemLabel="#{saler.companyName}" itemValue="#{saler.id}" />
+                                           var="saler" itemLabel="#{saler.name}" itemValue="#{saler.id}" />
                 </p:selectOneMenu>
                     </p:column>
                 </p:row>
