--- a/seedqr/src/main/webapp/xcadmin.xhtml
+++ b/seedqr/src/main/webapp/xcadmin.xhtml
@@ -33,6 +33,7 @@
         </script>
     </h:head>
     <h:body>
+        <ui:remove>
         <p:growl autoUpdate="true"/>
         <h:panelGroup id="indexPanel" layout="block" style="margin: auto; width: 1000px; height: 100%;">
             <h:panelGroup layout="block" style="position: absolute; top: 0; width: 1000px; height: 100px;">
@@ -74,5 +75,6 @@
                 版权所有 © 2016 成都星楚物流有限公司
             </h:panelGroup>
         </h:panelGroup>
+        </ui:remove>
     </h:body>
 </html>
