--- a/seedqr/src/main/webapp/WEB-INF/gui/packScanner.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/packScanner.xhtml
@@ -41,7 +41,7 @@
                     <p:column>
                         <p:selectOneMenu id="selectSeedId" value="#{packScanner.seedId}" 
                                              style="font-size: 90%;">
-                            <f:selectItems value="#{seedRegister.seeds}"
+                            <f:selectItems value="#{seedManager.seeds}"
                                            var="seed" itemLabel="#{seed.seedUiDisplay}" itemValue="#{seed.id}"/>
                         </p:selectOneMenu>
                     </p:column>
