--- a/seedqr/src/main/webapp/WEB-INF/gui/users.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/users.xhtml
@@ -4,6 +4,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <ui:composition>
+        <ui:remove>
         <h:form>
         <p:commandButton value="添加厂家用户信息" type="button" onclick="PF('dlg1').show();" /> 
 
@@ -50,5 +51,6 @@
             </p:panelGrid>
         </p:dialog>
         </h:form>
+            </ui:remove>
     </ui:composition>
 </html>
