--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -46,7 +46,8 @@
             <h:panelGroup layout="block" style="width: 100%; flex: 0 1 auto;">
                 <h:panelGroup layout="block" style="width: 100%; text-align: right;">
                     <h:form id="logout">
-                        <p:commandLink value="退出" action="#{authenticator.logout}"
+                        <p:commandLink value="退出（#{request.remoteUser}）"
+                                       action="#{authenticator.logout}"
                                        rendered="#{request.remoteUser ne null}"/>
                     </h:form>
                 </h:panelGroup>
