--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -46,9 +46,9 @@
             <h:panelGroup layout="block" style="width: 100%; flex: 0 1 auto;">
                 <h:panelGroup layout="block" style="width: 100%; text-align: right;">
                     <h:form id="logout">
-                        <p:commandLink value="退出（#{request.remoteUser}）"
-                                       action="#{authenticator.logout}"
-                                       rendered="#{request.remoteUser ne null}"/>
+                        <p:menuButton rendered="#{request.remoteUser ne null}" value="#{request.remoteUser}">
+                            <p:menuitem value="退出登陆" actionListener="#{authenticator.logout}"  icon="ui-icon-extlink"/>
+                        </p:menuButton>
                     </h:form>
                 </h:panelGroup>
                 <h1 style="text-align: center;">中国种子二维码追溯系统</h1>
@@ -105,6 +105,9 @@
                     </p:tab>
                     <p:tab title="用户管理" rendered="#{sessionData.isUserInRole(['admin'])}">
                         <ui:include src="WEB-INF/gui/users.xhtml"/>
+                    </p:tab>
+                    <p:tab title="外袋码生成" rendered="#{sessionData.isUserInRole(['admin'])}">
+                        <ui:include src="WEB-INF/gui/packCodeGenerator.xhtml"/>
                     </p:tab>
                 </p:tabView>
             </h:panelGroup>
