--- a/seedqr/src/main/webapp/query.html
+++ b/seedqr/src/main/webapp/query.html
@@ -1,44 +1,89 @@
 <!doctype html>
 <html lang="zh-cn">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Language" content="zh-cn">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="Description" content="中国种子二维码追溯查询">
-    <title>中国种子二维码追溯查询</title>
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
-	<link href="./css/bootstrap.min.css" rel="stylesheet">
-</head>
-	<body id="home">
-		<div id="muffin">
-        <div class="wy-header">
-            <div class="wy-mod-nav clearfix">
-                <h1>
-					中国种子二维码追溯查询
-                </h1>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="Content-Language" content="zh-cn">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="Description" content="中国种子二维码追溯查询">
+        <title>中国种子二维码追溯查询</title>
+        <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
+    </head>
+    <body id="home">
+        <div id="muffin">
+            <div class="wy-header">
+                <div class="wy-mod-nav clearfix">
+                    <h1 style="text-align: center; color: #cc0">
+                        中国种子二维码追溯查询
+                    </h1>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row seed-search" >
+                    <div class="col-lg-12">
+                        <div class="input-group input-group-lg">
+                            <input type="text" class="form-control" style= "background:none;" placeholder="单元识别码...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-success" style= "background:none;" type="button">查询</button>
+                            </span>
+                        </div><!-- /input-group -->
+                    </div><!-- /.col-lg-6 -->
+                </div><!-- /.row -->
+
+
+                <div class="panel panel-danger" style="display:none;">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">错误</h3>
+                    </div>
+                    <div class="panel-body">
+                        你所查询的单元识别码信息不存在！
+                    </div>
+                </div>
+
+                <div class="panel panel-primary"  style="background: rgba(255,255,255,0.8);">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">查询结果</h3>
+                    </div>
+                    <div class="panel-body">
+                        <ul class="nav nav-tabs nav-justified" role="tablist">
+                            <li role="presentation" class="active"><a href="#">基本信息</a>
+                            </li>
+                            <li role="presentation"><a href="#">生产加工信息</a></li>
+                            <li role="presentation"><a href="#">销售信息</a></li>
+                        </ul>
+                        
+                        <div class="table-responsive">
+                                    <table class="table table-striped">
+                                        <tr>
+                                            <td class="success">品种名称</td>
+                                            <td class="success">................</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="success">生产经营者名称</td>
+                                            <td class="success">................</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="success">单元识别代码</td>
+                                            <td class="success">.............</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="success">追溯网址</td>
+                                            <td class="success">...</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div id="footer" class="wy-footer">
+                <div class="row credits">
+                    <div class="col-md-12">
+                        Copyright © 2016. 星楚物流版权所有
+                    </div>
+                </div>
             </div>
         </div>
-
-		<div class="container">
-			<div class="row seed-search" >
-			<div class="col-lg-12">
-				<div class="input-group input-group-lg">
-					<input type="text" class="form-control" style= "background:none;" placeholder="单元识别码...">
-					<span class="input-group-btn">
-					<button class="btn btn-success" style= "background:none;" type="button">查询</button>
-				</span>
-				</div><!-- /input-group -->
-				</div><!-- /.col-lg-6 -->
-				</div><!-- /.row -->
-		</div>
-	
-
-	<div id="footer" class="wy-footer">
-		<div class="row credits">
-			<div class="col-md-12">
-					Copyright © 2016. 星楚物流版权所有
-				</div>
-		</div>
-	</div>
-   </div>
-</body></html>
+    </body></html>
