--- a/seedqr/src/main/webapp/WEB-INF/gui/wholesalers.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/wholesalers.xhtml
@@ -39,7 +39,7 @@
         </p:dataTable>
         </h:form>
         
-        <p:dialog header="添加销售商" widgetVar="dlg1" modal="true" showEffect="explode" hideEffect="bounce" minHeight="600" width="600">
+        <p:dialog header="添加销售商" widgetVar="dlg1" modal="true" minHeight="600" width="600">
             <h:form prependId="false">
             <p:panelGrid columns="2" styleClass="transparent" style="margin: auto;">
                 <p:outputLabel for="companyName" value="公司名称："/>
